<resources>
    <string name="app_name">BookManager</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Tên đăng nhập</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_in_short">Xong</string>
    <string name="login_check_box_text">Lưu mật khẩu?</string>
    <string name="notify_empty">Vui lòng nhập thông tin</string>
    <string name="notify_min_length_pass_word">Mật khẩu ít nhất gồm 6 kí tự</string>
    <string name="action_exit">Thoát</string>
    <string name="title_activity_home">Quản lí sách</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_change_password">Đổi mật khẩu</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="title_activity_user">Người dùng</string>
    <string name="title_activity_category">Thể loại</string>
    <string name="title_activity_book">Sách</string>
    <string name="title_activity_bill">Hóa đơn</string>
    <string name="title_activity_analytic">Thống kê</string>
    <string name="title_activity_best_seller">Sách bán chạy</string>

    <!-- Strings related to login -->
    <string name="action_save">Lưu</string>
    <string name="action_reset">Nhập lại</string>
    <string name="prompt_current_password">Mật khẩu hiện tại</string>
    <string name="prompt_new_password">Mật khẩu mới</string>
    <string name="prompt_re_password">Nhập lại mật khẩu</string>
    <string name="title_activity_add_users">Thêm người dùng</string>
    <string name="prompt_full_name">Họ và tên</string>
    <string name="prompt_phone_number">Số điện thoại</string>
    <string name="action_add">Thêm</string>
    <string name="prompt_category_id">Mã thể loại</string>
    <string name="prompt_category_name">Tên thể loại</string>
    <string name="title_activity_add_categories">Thêm thể loại</string>
    <string name="prompt_book_id">Mã sách</string>
    <string name="title_activity_add_books">Thêm sách</string>
    <string name="prompt_book_name">Tên sách</string>
    <string name="prompt_author">Tác giả</string>
    <string name="prompt_quantity">Số lượng</string>
    <string name="prompt_price">Giá bìa</string>
    <string name="prompt_publisher">Nhà xuất bản</string>
    <string name="prompt_bill_id">Mã hóa đơn</string>
    <string name="title_activity_add_bill">Thêm hóa đơn</string>
    <string name="prompt_bill_date">Ngày mua</string>
    <string name="action_next">Tiếp</string>
    <string name="title_activity_add_bill_detail">Thêm chi tiết hóa đơn</string>
    <string name="label_total">Tổng</string>
    <string name="notify_password_wrong">Mật khẩu không đúng</string>
    <string name="notify_username_exists">Tên đăng nhập đã tồn tại</string>
    <string name="toast_added_successfully">Thêm thành công</string>
    <string name="notify_re_password_dont_match">Mật khẩu không khớp</string>
    <string name="title_activity_user_detail">Chi tiết người dùng</string>
    <string name="action_edit">Sửa</string>
    <string name="toast_updated_successfully">Cập nhật thành công</string>
    <string name="notify_username_not_exists">Tên đăng nhập không tồn tại</string>
    <string name="action_pay">Thanh toán</string>
    <string name="action_yes">Có</string>
    <string name="action_no">Không</string>
    <string name="message_confirm_delete_user">Bạn có muốn xóa người dùng này không?</string>
    <string name="action_delete">Xóa</string>
    <string name="notify_min_length_user_name">Tên đăng nhập ít nhất gồm 6 kí tự</string>
    <string name="message_confirm_logout">Bạn có chắc chắn muốn đăng xuất không?</string>
    <string name="action_double_back_to_exit">Nhấn Quay lại một lần nữa để thoát</string>
    <string name="changed_password_successful">Thay đổi mật khẩu thành công</string>
    <string name="notify_new_password_not_different">Mật khẩu mới giống mật khẩu hiện tại. Mời nhập mật khẩu khác</string>
    <string name="admin">admin</string>
    <string name="example">Example</string>
    <string name="notify_length_category_id">Mã thể loại gồm 3–10 kí tự</string>
    <string name="notify_max_length_category_name">Tên thể loại tối đa gồm 50 kí tự</string>
    <string name="notify_category_id_exists">Mã thể loại đã tồn tại</string>
    <string name="message_confirm_delete_category">Bạn có muốn xóa thể loại này không?</string>
    <string name="toast_deleted_successfully">Xóa thành công</string>
    <string name="title_activity_category_detail">Chi tiết thể loại</string>
    <string name="notify_max_length_book_name">Tên sách tối đa gồm 50 kí tự</string>
    <string name="notify_length_book_id">Mã sách gồm 3–10 kí tự</string>
    <string name="notify_book_id_exists">Mã sách đã tồn tại</string>
    <string name="message_confirm_delete_book">Bạn có muốn xóa sách này không?</string>
    <string name="title_activity_book_detail">Chi tiết sách</string>
    <string name="notify_length_bill_id">Mã hóa đơn gồm 3–10 kí tự</string>
    <string name="notify_bill_id_exists">Mã hóa đơn đã tồn tại</string>
    <string name="notify_date_empty">Mời chọn ngày</string>
    <string name="notify_book_id_not_exists">Mã sách không tồn tại</string>
    <string name="message_confirm_delete_bill_detail">Bạn có muốn xóa chi tiết này không?</string>
    <string name="title_activity_bill_detail">Hóa đơn chi tiết</string>
    <string name="label_total_money">Thành tiền</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="label_today">Hôm nay</string>
    <string name="label_this_month">Tháng này</string>
    <string name="label_this_year">Năm này</string>
    <string name="message_confirm_delete_bill">Bạn có muốn xóa hóa đơn này không?</string>
    <string name="action_cancel">Hủy</string>
    <string name="books_in_stock">Số lượng sách trong kho</string>
    <string name="action_close">Đóng</string>
    <string name="logo">Logo</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="image_date_picker">Image Date Picker</string>
    <string name="image_add_category">Image Add Category</string>
    <string name="image_splash_screen">Image Splash Screen</string>
    <string name="cant_change_password_admin">Không thể đổi mật khẩu tài khoản admin</string>
    <string name="message_confirm_exit">Bạn có chắc chắn muốn thoát không?</string>
    <string name="books_in_stock_not_enough">Số lượng sách bán ra vượt quá số lượng sách trong kho</string>
</resources>
